# Cortex-Dialectique-praxis-th-orie-parall-le-ML-

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  .secrets.baseline  .yamllint  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPS.md  GITHUB_HYGIENE.md  LICENSE  Makefile  OPERATIONS.md  PROPOSE_RENAME_ISSUE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  timestamp.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels-commands.sh
.github/ISSUE_TEMPLATE/: critique.md  intel.md  proposal.md  security_vulnerability.md  task.md
.github/PULL_REQUEST_TEMPLATE/: synthesis.md
.github/workflows/: apply-patch.yml  ci-debate.yml  codeql.yml  dependency-review.yml  labels.yml  link-check.yml  lint-workflows.yml  nightly-bench.yml  (+4 more)
archive/: README.md
benchmarks/: compare.sh
core/: README.md
dashboards/: grafana.json  prometheus_rules.yml
deliberation/: deliberation.yml
docs/: A2A-PROTOCOL.md  ARCHITECTURE.md  GMAIL-SETUP.md  GOVERNANCE.md
experimental/: README.md
features/: README.md
hub/: AGENT-REGISTRY.md
infra/: README.md
issue_stubs/: issue-1-seed-project-space.md  issue-2-add-pre-commit-and-secret-scanning.md  issue-3-add-smoke-scenarios.md  issue-4-add-policies.md  issue-5-add-adr-and-roadmap.md  issue-6-session-001-ratification.md
policies/: README.md  budgets.yaml  limits.yaml
project-space/: __init__.py
research/: state-of-the-art.md
scripts/: README.md  boot-sequence.sh  check-deps.sh  doctor.sh  proof.sh  run-tests.sh  security-scan.sh  switch-agent.sh
security/: check_front_matter.py  detect-secrets.baseline  policies.md  pre-commit-config.yaml  review.md  secret-scan.yml
(+71 files in other folders)
